--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         
-        <script type="module" src="js/app.js"></script>
+        <script type="module" src="js/app.js" defer></script>
 
     </body>
 </html>
